--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/src/assets/icon.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="/src/assets/icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+    </style>
     <title>A-Ze</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnaBkyqvzbw56P2lyLsIk8RvGfQERCcB0&callback=initAutocomplete&libraries=places&v=weekly" defer></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnaBkyqvzbw56P2lyLsIk8RvGfQERCcB0&callback=initAutocomplete&libraries=places&v=weekly"
+      defer
+    ></script>
   </body>
 </html>
