--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnaBkyqvzbw56P2lyLsIk8RvGfQERCcB0&callback=initAutocomplete&libraries=places&v=weekly" defer></script>
+    <script>
+      var loadFile = function(event) {
+          var image = document.getElementById('output');
+          image.src=URL.createObjectURL(event.target.files[0]);
+          image.style.border = "1px solid #858282";
+          image.style.borderRadius = "5px";
+      };
+  </script>
   </body>
 </html>
