--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnaBkyqvzbw56P2lyLsIk8RvGfQERCcB0&callback=initAutocomplete&libraries=places&v=weekly"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnaBkyqvzbw56P2lyLsIk8RvGfQERCcB0&libraries=places&callback=initAutocomplete"
     defer></script>
   <script>
     var loadFile = function (event) {
