--- a/index.html
+++ b/index.html
@@ -8,40 +8,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
   <link rel="icon" href="/src/assets/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <style>
-    @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
-  </style>
+  <style> @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");</style>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnaBkyqvzbw56P2lyLsIk8RvGfQERCcB0&libraries=places&callback=initAutocomplete" defer></script>
   <title>A-Ze</title>
 </head>
 
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnaBkyqvzbw56P2lyLsIk8RvGfQERCcB0&libraries=places&callback=initAutocomplete"
-    defer></script>
-  <script>
-    var loadFile = function (event) {
-      var image = document.getElementById('output');
-      image.src = URL.createObjectURL(event.target.files[0]);
-      image.style.border = "1px solid #858282";
-      image.style.borderRadius = "5px";
-    };
-  </script>
-  <script>
-    document.querySelector("html").classList.add('js');
-
-    var fileInput = document.querySelector(".input-file"),
-      button = document.querySelector(".input-file-trigger"),
-      the_return = document.querySelector(".file-return");
-  </script>
-  <script>
-    function initAutocomplete() {
-      var address = document.getElementById('aadressHotell');
-      var autocomplete = new google.maps.places.Autocomplete(address);
-
-    }
-  </script>
 </body>
-
 </html>
